--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "serve": "nodemon server.js"
+    "serve": "nodemon server.js",
+    "activate": "npm i && npm i --prefix ../frontend && npm run build --prefix ../frontend"
   },
   "author": "Kaung Kyal Linn",
   "license": "ISC",
